--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,4 +10,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/GoLogic")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/GoLogic")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="GoLogicGameModeBase")
+NearClipPlane=1.000000
+
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode=/Game/Blueprints/BP_GM1.BP_GM1_C
 
